samples/_failures_safe/1761399187_823a7e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f25660d3.c: In function ‘tokenize’:
./samples/SAFE/__tmp_f25660d3.c:149:9: error: expected declaration or statement at end of input
  149 |         column += advance;
      |         ^~~~~~
./samples/SAFE/__tmp_f25660d3.c:149:9: error: expected declaration or statement at end of input
